spacing in project page

--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -39,114 +39,116 @@
             </nav>
         </div>
     </header>
-    <main>
-     <div>
-        <picture>
-            <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
-            <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
-        </picture>
-     </div> 
-     <div>
-        <h2><em>An intuitive storefront with a refined brand identity</em></h2>
-        <h1><strong>Sincere Tea</strong></h1>
-        <p>As the UX/UI designer for this project, I designed the brand identity and an e-commerce responsive web app where customers can easily and intuitively browse and purchase goods from the online store.
-        </p>
-     </div> 
-     <div>
-        <h3>Project</h3>
-        <p>E-commerce Responsive Web App</p>
-        <h3>Date</h3>
-        <p>November 2024</p>
-        <h3>Role</h3>
-        <p>UX/UI Design</p>
-     </div>
-     <div>
-        <picture>
-            <source srcset="img/sincere-tea/sincere-tea-transparent.png" media="(max-width:767px)">
-            <img src="img/sincere-tea/sincere-tea-transparent.png" alt="sincere tea logo">
-        </picture>
-     </div> 
-     <div>
-        <h2>The Challenge</h2>
-        <p>For this brief, I was tasked with developing a brand identity from scratch and creating a comprehensive brand guidelines document. The brief also required a responsive web app design to sell goods online. The storefront needed to align with the brand stylistically and functionally - in both appearance and values. Additionally, specified feature requirements included the ability to filter inventory, view product recommendations, and a navigate checkout flow with minimal steps.
-        </p>
-     </div>
-     <div>
-        <h2>The Solution</h2>
-        <p>I addressed the user stories presented in the brief directly through corresponding features in the product design. Features include filtering options, product recommendations in the checkout drawer, a clean checkout flow.
-        </p>
-     </div>
-     <div>
-        <h2>Processs</h2>
-        <h4>Brand Identity
-        </h4>
-        <p>The first step in this conceptual project was to create a strong brand identity and define specific brand guidelines for a modern and clean storefront. I created a comprehensive guide to make Sincere Tea a unique and memorable brand, establish trust through visual consistency, and lay the groundwork for a cohesive user experience.
-        </p>
-        <h4>Gathering Requirements
-        </h4>
-        <p>In this stage, I defined key features based on user needs, including inventory filtering, personalized product recommendations, and a streamlined checkout flow.  I chose these features based on the user stories laid out in the project brief.
-        </p> 
-        <h4>Ideation
-        </h4>
-        <p>The first step in this conceptual project was to create a strong brand identity and define specific brand guidelines for a modern and clean storefront. I created a comprehensive guide to make Sincere Tea a unique and memorable brand, establish trust through visual consistency, and lay the groundwork for a cohesive user experience.
-        </p>
-        <h4>Protoyping
-        </h4>
-        <p>I then created an interactive flow using the mid-fidelity wireframes, which allowed for my checkout experience to be user tested at this point. I gave 4 user testing participants a task to complete using grayscale mid-fidelity prototypes: add multiple items to the cart. The steps involved adding one product to the cart, viewing and selecting a suggested item, and ending on the checkout page.
-        </p>
-        <h4>Usability
-        </h4>
-        <p>Participants revealed a few key issues about this design iteration. 1. frustration that the checkout drawer appeared scrollable but was not; 2. the main text was thought to be too small, especially in the top navigation; and 3. expectations were not met when clicking suggested items. Performing user testing at this stage gave me the chance to address these pain points before the moving on to the final designs.
-        </p>
-        <h4>Key Revisions
-        </h4>
-        <p>Using the key takeaways from usability testing, I implemented the following improvements: 1. I made the checkout drawer scrollable, and eliminated the unnecessary scroll bar 2. I made the suggested items in checkout drawer easier to view/add with a clearer UI card and ‘add to cart’ button, and 3. I increased the font size in the top navigation across the site for easier readability.
-        </p>
-     </div>
-     <div>
-        <h2>Final Designs</h2>
-        <div>
-            <picture>
-                <source srcset="img/sincere-tea/desktop-screens/browse-products.jpg" media="(max-width:767px)">
-                <img src="img/sincere-tea/desktop-screens/browse-products.jpg" alt="sincere tea browse page">
-            </picture>
-         </div> 
-     </div>
-     <div>
-        <h2>Impact</h2>
-        <p>My goal with Sincere Tea was to establish a cohesive and memorable brand identity while creating a seamless user experience. If this e-commerce site launched, I would measure success through user engagement, brand awareness, and customer feedback. Key benchmarks would include social media engagement, website traffic, and usability testing outcomes.</p>
-     </div>
-     <div>
-        <h2>Reflection</h2>
-       <p>Challenge: Ensuring both mobile and desktop versions of the shop maintained a high level of design quality.</p>
-       <p>Solution: I reused common components and studied examples from successful online shops to guide my decisions. Viewing the designs side by side allowed me to confirm that both versions were well-suited to their respective devices.</p>
-       <p>Challenge: Enhancing the usability of the checkout drawer by making product recommendations easier to view and add.</p>
-       <p>Solution: I modified the checkout drawer overlay to include suggested items. This also addressed the user story: “As a frequent customer, I want to see recommendations of products I may like, so that I find items I might not otherwise on my own.”</p>
-       <p>Challenge: Developing a strong brand identity and applying it consistently throughout all screens.</p>
-       <p>Solution: I created a thorough set of design guidelines, which streamlined the branding process. Feedback highlighted that the design was “nice and polished,” with harmonious imagery and colors.</p>
+    <main class="project-page">
 
-    </div>
-     <div>
-        <h2>Next Steps</h2>
-        <h4>Expand UI flows
-        </h4>
-        <p>Build out the UI flows more extensively to account for a broader range of user interactions and scenarios.
-        </p>
-        <h4>Develop a cohesive illustration set
-        </h4>
-        <p>Expand on the existing illustrated logo by creating a complementary set of simple illustrations. These could include designs for a “Success” modal, “Error” screen, and other key UI elements, matching the style of the teapot and cup icons.
-        </p>
-        <h4>Refine skills in responsive design
-        </h4>
-        <p>Continue refining responsive design techniques to ensure the user experience remains seamless and engaging across all device types, from mobile to desktop.
-        </p>
-        <h4>Incorporate accessibility features
-        </h4>
-        <p>Address user stories that require accessible features, such as an option to make text larger for readability.
-        </p>
-     </div>
-     
+        <div class="container">
+         <div>
+            <picture>
+                <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
+                <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
+            </picture>
+         </div>
+         <div>
+            <h3><em>An intuitive storefront with a refined brand identity</em></h3>
+            <h1><strong>Sincere Tea</strong></h1>
+            <p>As the UX/UI designer for this project, I designed the brand identity and an e-commerce responsive web app where customers can easily and intuitively browse and purchase goods from the online store.
+            </p>
+         </div>
+         <div>
+            <h4>Project</h4>
+            <p>E-commerce Responsive Web App</p>
+            <h4>Date</h4>
+            <p>November 2024</p>
+            <h4>Role</h4>
+            <p>UX/UI Design</p>
+         </div>
+         <div>
+            <picture>
+                <source srcset="img/sincere-tea/sincere-tea-transparent.png" media="(max-width:767px)">
+                <img src="img/sincere-tea/sincere-tea-transparent.png" alt="sincere tea logo">
+            </picture>
+         </div>
+         <div>
+            <h2>The Challenge</h2>
+            <p>For this brief, I was tasked with developing a brand identity from scratch and creating a comprehensive brand guidelines document. The brief also required a responsive web app design to sell goods online. The storefront needed to align with the brand stylistically and functionally - in both appearance and values. Additionally, specified feature requirements included the ability to filter inventory, view product recommendations, and a navigate checkout flow with minimal steps.
+            </p>
+         </div>
+         <div>
+            <h2>The Solution</h2>
+            <p>I addressed the user stories presented in the brief directly through corresponding features in the product design. Features include filtering options, product recommendations in the checkout drawer, a clean checkout flow.
+            </p>
+         </div>
+         <div>
+            <h2>Processs</h2>
+            <h4>Brand Identity
+            </h4>
+            <p>The first step in this conceptual project was to create a strong brand identity and define specific brand guidelines for a modern and clean storefront. I created a comprehensive guide to make Sincere Tea a unique and memorable brand, establish trust through visual consistency, and lay the groundwork for a cohesive user experience.
+            </p>
+            <h4>Gathering Requirements
+            </h4>
+            <p>In this stage, I defined key features based on user needs, including inventory filtering, personalized product recommendations, and a streamlined checkout flow.  I chose these features based on the user stories laid out in the project brief.
+            </p>
+            <h4>Ideation
+            </h4>
+            <p>The first step in this conceptual project was to create a strong brand identity and define specific brand guidelines for a modern and clean storefront. I created a comprehensive guide to make Sincere Tea a unique and memorable brand, establish trust through visual consistency, and lay the groundwork for a cohesive user experience.
+            </p>
+            <h4>Protoyping
+            </h4>
+            <p>I then created an interactive flow using the mid-fidelity wireframes, which allowed for my checkout experience to be user tested at this point. I gave 4 user testing participants a task to complete using grayscale mid-fidelity prototypes: add multiple items to the cart. The steps involved adding one product to the cart, viewing and selecting a suggested item, and ending on the checkout page.
+            </p>
+            <h4>Usability
+            </h4>
+            <p>Participants revealed a few key issues about this design iteration. 1. frustration that the checkout drawer appeared scrollable but was not; 2. the main text was thought to be too small, especially in the top navigation; and 3. expectations were not met when clicking suggested items. Performing user testing at this stage gave me the chance to address these pain points before the moving on to the final designs.
+            </p>
+            <h4>Key Revisions
+            </h4>
+            <p>Using the key takeaways from usability testing, I implemented the following improvements: 1. I made the checkout drawer scrollable, and eliminated the unnecessary scroll bar 2. I made the suggested items in checkout drawer easier to view/add with a clearer UI card and ‘add to cart’ button, and 3. I increased the font size in the top navigation across the site for easier readability.
+            </p>
+         </div>
+         <div>
+            <h2>Final Designs</h2>
+            <div>
+                <picture>
+                    <source srcset="img/sincere-tea/desktop-screens/browse-products.jpg" media="(max-width:767px)">
+                    <img src="img/sincere-tea/desktop-screens/browse-products.jpg" alt="sincere tea browse page">
+                </picture>
+             </div>
+         </div>
+         <div>
+            <h2>Impact</h2>
+            <p>My goal with Sincere Tea was to establish a cohesive and memorable brand identity while creating a seamless user experience. If this e-commerce site launched, I would measure success through user engagement, brand awareness, and customer feedback. Key benchmarks would include social media engagement, website traffic, and usability testing outcomes.</p>
+         </div>
+         <div>
+            <h2>Reflection</h2>
+           <p>Challenge: Ensuring both mobile and desktop versions of the shop maintained a high level of design quality.</p>
+           <p>Solution: I reused common components and studied examples from successful online shops to guide my decisions. Viewing the designs side by side allowed me to confirm that both versions were well-suited to their respective devices.</p>
+           <p>Challenge: Enhancing the usability of the checkout drawer by making product recommendations easier to view and add.</p>
+           <p>Solution: I modified the checkout drawer overlay to include suggested items. This also addressed the user story: “As a frequent customer, I want to see recommendations of products I may like, so that I find items I might not otherwise on my own.”</p>
+           <p>Challenge: Developing a strong brand identity and applying it consistently throughout all screens.</p>
+           <p>Solution: I created a thorough set of design guidelines, which streamlined the branding process. Feedback highlighted that the design was “nice and polished,” with harmonious imagery and colors.</p>
+        </div>
+         <div>
+            <h2>Next Steps</h2>
+            <h4>Expand UI flows
+            </h4>
+            <p>Build out the UI flows more extensively to account for a broader range of user interactions and scenarios.
+            </p>
+            <h4>Develop a cohesive illustration set
+            </h4>
+            <p>Expand on the existing illustrated logo by creating a complementary set of simple illustrations. These could include designs for a “Success” modal, “Error” screen, and other key UI elements, matching the style of the teapot and cup icons.
+            </p>
+            <h4>Refine skills in responsive design
+            </h4>
+            <p>Continue refining responsive design techniques to ensure the user experience remains seamless and engaging across all device types, from mobile to desktop.
+            </p>
+            <h4>Incorporate accessibility features
+            </h4>
+            <p>Address user stories that require accessible features, such as an option to make text larger for readability.
+            </p>
+         </div>
+        </div>
     </main>
+    
     <footer id="contact">
         <div class="container">
           <h2>Let's connect</h2>
