add media inquiries and adjust button styling

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
         </div> <!-- End of hero section -->
                             
         <div id="work">
-            <div class="container"><!-- open first column (used for image) -->
+            <div class="container"><!-- container for all Projects content -->
                 <h2>Projects</h2>
-                <div class="row"><!-- open row that holds (2) columns for project -->
-                    <div>
+                <div class="row"><!-- row: 2 columns for project -->
+                    <div class="column col-md-6 col-lg-7">
                         <picture> <!-- First Column: Image -->
                             <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
                             <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
                         </picture>
                     </div><!-- end first column -->
-                    <div><!-- open second column (used for text) -->
+                    <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Sincere Tea</h3>
                         <p><!-- open paragraph -->
                             <i>An intuitive storefront with a refined brand identity.</i>
@@ -72,15 +72,15 @@
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
 
-                <div class="row"><!-- open row that holds (2) columns for project -->
-                    <div> <!-- open first column (used for image) -->
+                <div class="row"><!-- row: 2 columns for project -->
+                    <div class="column col-md-6 col-lg-7"> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/dusen-dusen/dusen-dusen-thumbnail.png" media="(max-width:767px)">
                             <img src="img/dusen-dusen/dusen-dusen-thumbnail.png"
                                 alt="Dusen Dusen Memory Game project thumbnail">
                         </picture>
                     </div><!-- end first column -->
-                    <div><!-- open second column (used for text) -->
+                    <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Dusen Dusen Memory Game</h3>
                         <p><i>Play with the patterns you love.</i></p>
                         <p>I designed a brain-teasing memory game app in the awesome style of
@@ -90,14 +90,14 @@
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
 
-                <div class="row"><!-- open row that holds (2) columns for project -->
-                    <div> <!-- open first column (used for image) -->
+                <div class="row"><!-- row: 2 columns for project -->
+                    <div class="column col-md-6 col-lg-7"> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/home-cooking/home-cooking-thumbnail.png" media="(max-width:767px)">
                             <img src="img/home-cooking/home-cooking-thumbnail.png" alt="Home Cooking project thumbnail">
                         </picture>
                     </div><!-- end first column -->
-                    <div><!-- open second column (used for text) -->
+                    <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Home Cooking</h3>
                         <p><i>Not sure what to make for dinner tonight? This will help.</i></p>
                         <p>Home Cooking is a source for recipes that inspire dinner at home. In this
@@ -109,26 +109,23 @@
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
 
-                <div class="row"><!-- open row that holds (2) columns for project -->
-                    <div> <!-- open first column (used for image) -->
+                <div class="row"><!-- row: 2 columns for project -->
+                    <div class="column col-md-6 col-lg-7"> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/buttery-notes/buttery-notes-thumbnail.png" media="(max-width:767px)">
                             <img src="img/buttery-notes/buttery-notes-thumbnail.png" alt="Buttery Notes project thumbnail">
                         </picture>
                     </div><!-- end first column -->
-                    <div><!-- open second column (used for text) -->
+                    <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Buttery Notes</h3>
                         <p><i>makes note-taking so…buttery.</i></p>
-                        <p>Enter a digital feel that is fun, tidy, and satisfying. As the UX/UI designer
-                            for this project, I designed the brand identity and an e-commerce
-                            responsive web app where customers can easily and intuitively browse
-                            and purchase goods from the online store.</p>
+                        <p>Enter a digital feel that is fun, tidy, and satisfying. Buttery Notes is a    mobile app for students to organize study plans with ease. I designed a clean, modern interface with playful details, focusing on clarity, simplicity, and a polished handoff to developers.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
 
-                <div class="row"><!-- open row that holds (2) columns for project -->
-                    <div> <!-- open first column (used for image) -->
+                <div class="row"><!-- row: 2 columns for project -->
+                    <div class="column col-md-6 col-lg-7"> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
                                 media="(max-width:767px)">
@@ -136,11 +133,11 @@
                                 alt="Boulder Zen Center project thumbnail">
                         </picture>
                     </div><!-- end first column -->
-                    <div><!-- open second column (used for text) -->
+                    <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Boulder Zen Center</h3>
                         <p><i>A Beautiful and Clear Guide to Brand Implementation</i></p>
                         <p>On this project, I created a style guide that captures the structure and warmth of an
-                            intentional meditation community</p>
+                            intentional meditation community.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
