correct nav bar space in about page and add link animations

--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
 
 <body>
     <header>
-        <div>
+        <div class="container">
             <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
