add link to logo to home page direct

--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -29,7 +29,9 @@
 <body>
     <header>
         <div>
-            <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
+            <a href="index.html">
+                <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
+            </a>  
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
