--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 <body>
     <header>
         <div class="container">
-            <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
+            <a href="index.html">
+                <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
+            </a>  
             <nav>
                 <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
