--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
                         <h3>Custom Illustrations</h3>
                         <p><i>Making your brand kit unique and memorable!</i></p>
-                        <p>I create custom illustrations according to project requirements, as well as CCS animations to bring them to life the screen. </p>
+                        <p>I create custom illustrations according to project requirements, as well as CCS animations to bring them to life on the screen. </p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
