add javascript file

--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
           <p class="copyright">© Deborah Detchon 2025</p>
         </div>
       </footer>
+      <script src="js/scripts.js">
+        
+      </script>
 </body>
 
 </html>
