--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -28,12 +28,12 @@
 
 <body>
     <header>
-        <div>
+        <div class="container">
             <a href="index.html">
                 <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
             </a>  
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
