--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8686b7ef5d.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <header>
         <div class="container">
+            <div class="navtoggle" id="myNavtoggle">
             <a href="index.html">
                 <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
             </a>  
@@ -36,10 +38,12 @@
                 <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                    <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+                    
                 </ul>
             </nav>
-        </div>
+        </div></div>
     </header>
     <main> <!-- Start of the main content -->
 
