add prominent button for resume

--- a/about.html
+++ b/about.html
@@ -97,7 +97,6 @@
                     <p>In all of these positions, I’ve honed my skills in responding to business needs and customer
                         expectations. My style, both personally and professionally, is to be sincere, straightforward,
                         and solution-focused. And to make room for beauty.</p>
-                    <a href="files/resume-deborah-detchon-2024.pdf" target="_blank">Open my resume</a>
                 </div>
                 <div class="container">
                     <h2>Skills and Tools</h2>
@@ -123,6 +122,9 @@
                                 <li>Many others! - marketing, admin, productivity</li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="button-wrapper">
+                        <a href="files/resume-deborah-detchon-2024.pdf" class="button" target="_blank">Check out my</a>
                     </div>
                 </div>
             </div>
