--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="button-wrapper">
-                        <a href="files/resume-deborah-detchon-2024.pdf" class="button" target="_blank">Check out my</a>
+                        <a href="files/resume-deborah-detchon-2024.pdf" class="button" target="_blank">Check out my resume</a>
                     </div>
                 </div>
             </div>
