remove extra slashes

--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
     <meta name="description" content="UX UI Design Portfolio Product Web App Designer">
     <title>Deborah Detchon UX/UI Designer Boulder CO</title>
     
-    <link rel="icon" type="image/png" href="/my-favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/my-favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="d.detchon" />
-    <link rel="manifest" href="/my-favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/my-favicon/favicon-96x96.png" sizes="96x96" >
+    <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" >
+    <link rel="shortcut icon" href="/my-favicon/favicon.ico" >
+    <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" >
+    <meta name="apple-mobile-web-app-title" content="d.detchon" >
+    <link rel="manifest" href="/my-favicon/site.webmanifest" >
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="navtoggle" id="myNavtoggle">
             <a href="index.html">
-                <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
+                <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" >
             </a>  
             <nav>
                 <ul class="navigation">
@@ -139,16 +139,16 @@
 
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/deborah-detchon" target="_blank" aria-label="LinkedIn">
-                    <img src="img/linked-in_icon.svg" alt="LinkedIn icon" />
+                    <img src="img/linked-in_icon.svg" alt="LinkedIn icon" >
                 </a>
                 <a href="https://www.behance.net/deborahdetchon1" target="_blank" aria-label="Behance">
-                    <img src="img/behance_icon.svg" alt="Behance icon" />
+                    <img src="img/behance_icon.svg" alt="Behance icon" >
                 </a>
                 <a href="https://github.com" target="_blank" aria-label="GitHub">
-                    <img src="img/github_icon.svg" alt="GitHub icon" />
+                    <img src="img/github_icon.svg" alt="GitHub icon" >
                 </a>
                 <a href="https://www.instagram.com/elephantclouds/" target="_blank" aria-label="Instagram">
-                    <img src="img/instagram_icon.svg" alt="Instagram icon" />
+                    <img src="img/instagram_icon.svg" alt="Instagram icon" >
                 </a>
             </div>
 
